@@ -1,3 +1,7 @@
+2005-08-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-chunksize): Improve docstring.
+
 2005-08-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.50 released.
